[package]
name = "yellowstone-grpc-proto"
version = "12.2.0+solana.3.1.14"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Protobuf Definitions"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = true

[dependencies]
bytes = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }

bincode = { workspace = true, optional = true }
solana-account = { workspace = true, optional = true }
solana-account-decoder = { workspace = true, optional = true, features = ["agave-unstable-api"] }
solana-clock = { workspace = true, optional = true }
solana-hash = { workspace = true, optional = true }
solana-message = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true }
solana-signature = { workspace = true, optional = true }
solana-transaction = { workspace = true, optional = true }
solana-transaction-context = { workspace = true, optional = true }
solana-transaction-error = { workspace = true, optional = true }
solana-transaction-status = { workspace = true, optional = true, features = ["agave-unstable-api"] }

[build-dependencies]
anyhow = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
default = ["tonic", "tonic-compression"]
tonic = ["dep:tonic", "dep:tonic-prost"]
tonic-compression = ["tonic", "tonic/gzip", "tonic/zstd"]
account-data-as-bytes = [
    "dep:bytes"
]
convert = [
    "dep:bincode",
    "dep:solana-account",
    "dep:solana-account-decoder",
    "dep:solana-clock",
    "dep:solana-hash",
    "dep:solana-message",
    "dep:solana-pubkey",
    "dep:solana-signature",
    "dep:solana-transaction",
    "dep:solana-transaction-context",
    "dep:solana-transaction-error",
    "dep:solana-transaction-status",
]

[lints]
workspace = true
